infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flowq-prod
  labels:
    app.kubernetes.io/part-of: flowq
    app.kubernetes.io/managed-by: flowq-platform
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
